# SDL2_Player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
shaders/: beauty.frag  blur.frag  color.frag  general.vert  sharpen.frag  sobel.frag  video.frag  video.vert  yuv_fragment.glsl  yuv_vertex.glsl
src/: app.cpp  player_app.cpp  player_app.hpp
src/ffmpeg_utils/: ffmpeg_headers.hpp
src/play/: audio_player.cpp  audio_player.hpp  audio_resampler.cpp  clock.hpp  opengl_renderer.cpp  opengl_renderer.hpp  renderer.cpp
src/player_core/: audio_resampler.hpp  decode.cpp  decode.hpp  demux.cpp  demux.hpp  player_state.cpp  player_state.hpp
src/player_core/decode/: audio_decode.cpp  audio_decode.hpp  video_decode.cpp  video_decode.hpp
src/player_core/utils/: player_constants.hpp  safe_queue.hpp  timestamp_utils.cpp  timestamp_utils.hpp
src/player_thread/: audio_player.cpp  audio_player.hpp  decode_thread.cpp  decode_thread.hpp  demux_thread.cpp  demux_thread.hpp  player_app.cpp  player_app.hpp  thread_utils.cpp  thread_utils.hpp  video_refresh_timer.cpp  video_refresh_timer.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/shader_utils/: config.hpp  shader.hpp
src/ui/: gui_manager.cpp  gui_manager.hpp  gui_panel.hpp  ui_layer.cpp  ui_layer.hpp
src/ui/panels/: control_panel.cpp  control_panel.hpp  main_panel.cpp  main_panel.hpp  video_panel.cpp  video_panel.hpp
src/utils/: file_dialog.cpp  file_dialog.hpp
